fixed header alignment

--- a/Bandeins Strange/style.css
+++ b/Bandeins Strange/style.css
@@ -10,25 +10,32 @@ body {
     
     background-color: #000000;
     color: #ffffff;
-    margin: 50vh 40px 40px 40px;
+    margin: 40px;
 
 }
 
 
 h1 {
-    position: fixed;
+    /* position: fixed;
     top: 80px;
     left: 80px;
-    z-index: 1;
+    z-index: 1; */
+    font-size: 60px;
     font-variation-settings: "wght" 100, "wdth" 100;
 }
 
+header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
 
 nav {
-    position: fixed;
+    /* position: fixed;
     top: 80px;
     right: 80px;
-    z-index: 1;
+    z-index: 1; */
 }
 
 
